--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cubx-webpackage-document-api": "^3.0.0",
     "fs": "^0.0.2",
     "https-proxy-agent": "^1.0.0",
+    "http-proxy-agent": "^1.0.0",
     "lodash": "^3.10",
     "mime": "^1.2.11",
     "nano": "^6.0.2",
@@ -44,15 +45,16 @@
     "multi-glob": "1.0.1"
   },
   "devDependencies": {
-    "standard": "^5.4.1",
+    "chai": "^3.4.0",
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-promise": "^3.4.2",
     "eslint-plugin-standard": "^1.3.1",
-    "jsdoc": "^3.3.0-alpha10",
     "ink-docstrap": "^0.4.12",
+    "jsdoc": "^3.3.0-alpha10",
     "mocha": "^2.1.0",
-    "chai": "^3.4.0",
     "sinon": "~1.12.2",
+    "standard": "^5.4.1",
     "superagent": "^1.4.0",
     "supercouch": "^0.2.4",
     "time-grunt": "~1.0.0"
