--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "fs": "^0.0.2",
     "http-proxy-agent": "^2.1.0",
     "https-proxy-agent": "^2.2.1",
-    "lodash": "^4.17.11",
     "mime": "^1.2.11",
     "multi-glob": "^1.0.2",
     "nano": "^6.0.2",
@@ -47,14 +46,20 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "couch-slouch": "^1.0.5",
+    "couchdb-bootstrap": "^14.2.0",
     "eslint": "^5.12.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "express": "^4.16.4",
+    "express-pouchdb": "^4.1.0",
+    "fs-extra": "^7.0.1",
+    "lodash": "^4.17.11",
+    "memdown": "^3.0.0",
     "mocha": "^5.2.0",
+    "pouchdb": "^7.0.0",
     "sinon": "^7.2.2",
     "standard": "^12.0.1",
-    "superagent": "^4.1.0",
     "time-grunt": "~1.0.0"
   }
 }
