--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ docs
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules/
 
+.db/**/log.txt
